5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1680_1949.log
== TEST (2019-04-25 16:16:52) 
-- CODE:
jogo = int(input("Numero apostado pelo jogador: "))
loteria = int(input("Numero sorteado na loteria: "))

j = (jogo // 10) % 10
j1 = jogo % 10

print(j)
print(j1)
if(jogo == loteria):
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:16:58) 
-- CODE:
jogo = int(input("Numero apostado pelo jogador: "))
loteria = int(input("Numero sorteado na loteria: "))

j = (jogo // 10) % 10
j1 = jogo % 10

print(j)
print(j1)

	
-- OUTPUT:
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:22:46) 
-- CODE:
jogo = int(input("Numero apostado pelo jogador: "))
loteria = int(input("Numero sorteado na loteria: "))

j = (jogo // 10) % 10
j1 = jogo % 10
l = (loteria // 10) % 10
l1 = loteria % 10

if(jogo == loteria):
	print("Ganhou R$ 100.000,00")
elif(j1 == l and j == l1):
	print("Ganhou R$ 50.000,00")
elif(j == l1 or j == l or j1 == l1 or j1 == l):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
	
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:22:52) 
-- CODE:
jogo = int(input("Numero apostado pelo jogador: "))
loteria = int(input("Numero sorteado na loteria: "))

j = (jogo // 10) % 10
j1 = jogo % 10
l = (loteria // 10) % 10
l1 = loteria % 10

if(jogo == loteria):
	print("Ganhou R$ 100.000,00")
elif(j1 == l and j == l1):
	print("Ganhou R$ 50.000,00")
elif(j == l1 or j == l or j1 == l1 or j1 == l):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
	
-- EXECUTION TIME:
0.134436
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
